--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -25,16 +25,22 @@ ext {
             koin: "org.koin:koin-core:$koin",
             koinViewModel: "org.koin:koin-androidx-viewmodel:$koin",
 
-            moshi: "com.squareup.moshi:moshi-kotlin:$moshi"
+            moshi: "com.squareup.moshi:moshi-kotlin:$moshi",
+
+            reflection: "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     ]
 
     uiVersion = [
-            groupieAdapter = "2.7.0",
+            groupieAdapterVersion = '2.7.0',
+            constraintLayoutVersion = '1.1.3',
+            material = '1.1.0'
     ]
 
     ui = [
-            groupieAdapter: "com.xwray:groupie:${groupieAdapter}",
-            groupieAdapterExtension: "com.xwray:groupie-kotlin-android-extensions:${groupieAdapter}"
+            groupieAdapter: "com.xwray:groupie:$groupieAdapterVersion",
+            groupieAdapterExtension: "com.xwray:groupie-kotlin-android-extensions:$groupieAdapterVersion",
+            constraintLayout: "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion",
+            material: "com.google.android.material:material:$material"
     ]
 
     networkVersions = [
@@ -43,9 +49,9 @@ ext {
     ]
 
     networkLibs = [
-            retrofit: "com.squareup.retrofit2:retrofit:${retrofitVersion}",
-            retrotitConverter: "com.squareup.retrofit2:converter-gson:${retrofitVersion}",
-            okHttp3: "com.squareup.okhttp3:okhttp:${okHttp3Version}",
-            okHttp3Interceptor:  "com.squareup.okhttp3:logging-interceptor:${okHttp3Version}"
+            retrofit: "com.squareup.retrofit2:retrofit:$retrofitVersion",
+            retrotitConverter: "com.squareup.retrofit2:converter-gson:$retrofitVersion",
+            okHttp3: "com.squareup.okhttp3:okhttp:$okHttp3Version",
+            okHttp3Interceptor:  "com.squareup.okhttp3:logging-interceptor:$okHttp3Version"
     ]
 }
