--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -38,16 +38,20 @@ dependencies {
     implementation common.ktx
     implementation common.koin
     implementation common.koinViewModel
-//
-//    def ui = rootProject.ext.ui
-//    ui.groupieAdapter
-//    ui.groupieAdapterExtension
+    implementation common.reflection
 
-    implementation "com.xwray:groupie:2.7.0"
-    implementation "com.xwray:groupie-kotlin-android-extensions:2.7.0"
-    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    def ui = rootProject.ext.ui
+    implementation ui.groupieAdapter
+    implementation ui.groupieAdapterExtension
+    implementation ui.constraintLayout
+    implementation ui.material
+
+
+//    implementation "com.xwray:groupie:2.7.0"
+//    implementation "com.xwray:groupie-kotlin-android-extensions:2.7.0"
+//    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
+//    implementation 'com.google.android.material:material:1.1.0'
+//    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
 
     testImplementation 'junit:junit:4.12'
